--- a/spring_9jwt/Dockerfile
+++ b/spring_9jwt/Dockerfile
@@ -1,11 +1,12 @@
 # COPY build/libs/*.jar spring_9jwt.jar
 # ---- Build Stage ----
-FROM gradle:8.3-jdk17 AS builder
+FROM gradle:4.4.1-jdk21 AS builder
 WORKDIR /app
 COPY build.gradle settings.gradle ./
+COPY gradlew . 
 COPY gradle ./gradle
 COPY src ./src
-RUN gradle build -x test --no-daemon
+RUN ./gradlew build -x test --no-daemon
 
 # ---- Run Stage ----
 FROM openjdk:21-jdk
