--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -56,6 +56,7 @@ jobs:
               --network cloud-cicid-net \
               -e DB_USERNAME=${{ secrets.DB_USERNAME }} \
               -e DB_PASSWORD=${{ secrets.DB_PASSWORD }} \
+              -e DB_URL=${{ secrets.DB_URL }} \
               -p 8080:8080 \
               ${{ secrets.DOCKER_HUB_USERNAME }}/spring_9jwt-app
 
