--- a/spring_9jwt/src/main/resources/application.yml
+++ b/spring_9jwt/src/main/resources/application.yml
@@ -4,7 +4,7 @@ spring:
   config:
     import: optional:file:.env[.properties]  
   datasource:  
-    driver-class-name: ${DB_DRIVER}
+    driver-class-name: com.mysql.cj.jdbc.Driver
     url: ${DB_URL}
     username: ${DB_USERNAME}
     password: ${DB_PASSWORD}
